1. Adding more details to the ReadME file 2. Fixing the UT tests